<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiGraph</string>

    <string name="menu_title_home">Main Page</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_toggle_scanning">Toggle Scanning</string>
    <string name="menu_title_overview">Open Overview</string>
    <string name="menu_title_graph_activity">Detailed Graphs</string>
    <string name="menu_title_graph_windows_new">New Graph Window</string>
    <string name="menu_title_graph_windows_close">Close all Graph Windows</string>
    <string name="menu_title_debug">Debug</string>
    <string name="menu_title_exit">Exit</string>

    <string name="filler_ssid">cwifi</string>
    <string name="filler_bssid">[00:11:22:33:44:55]</string>
    <string name="filler_network_details">cwifi [00:11:22:33:44:55]</string>
    <string name="filler_timestamp">Jan 07, 2013 6:40PM</string>
    <string name="filler_records">6</string>
    <string name="filler_level">-45 dBm</string>
    <string name="filler_frequency">2105 MHz</string>
    <string name="filler_capabilities">WPA, WPA2 (WPS: No, Type: Access Point)</string>
    <string name="filler_count">#15</string>
    <string name="filler_content_label">Label:</string>
    <string name="filler_content_text">Content Goes Here</string>
    <string name="filler_network_detail_header">cwifi</string>
    <string name="filler_network_detail_overview">[00:11:22:33:44:55] - WPA, WPA2 (WPS: No, Type: Access Point)</string>
    <string name="filler_database_count">Database Entries: #</string>
    <string name="filler_scan_interval">Scan Interval: ?</string>
    <string name="filler_timeframe">From Jan. 8th through Jan. 10th</string>
    <string name="description_network_icon">Icon indicating security type</string>
    <string name="label_activity_graph">Wireless Graphs</string>
    <string name="label_graph_header">Graph for:</string>
    <string name="label_scanning_status">Current Scanning Status:</string>
    <string name="label_records">Records:</string>
    <string name="label_lastseen">Last Seen:</string>
    <string name="label_level">Signal Strength:</string>
    <string name="label_frequency">Frequency:</string>
    <string name="label_capabilities">Security:</string>
    <string name="label_timestamp">Seen at:</string>
    <string name="label_results">Results:</string>
    <string name="label_network_detail_header">Network:</string>
    <string name="label_debug_add_fake_networks">Add Fake Networks to DB</string>
    <string name="label_graph_timeframe">Timeframe for Graph:</string>
    <string name="title_activity_graph">Wireless Graphs</string>
    <string name="title_activity_settings">WifiGraph Settings</string>
    <string name="title_child_signal_graph">Historical Graph</string>
    <string name="title_activity_overview">Graph Overview</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_graphs">Graphs</string>
    <string name="pref_default_scan_interval">5000</string>
    <string name="pref_default_activity">mainPage</string>
    <string name="pref_default_graph_interval">10</string>
    <string name="notif_service_title">WifiGraph Scanner</string>
    <string name="notif_service_content">Scanner is running</string>
    <string name="dialog_service_stop">Stop the sniffer service?</string>
    <string name="dialog_button_yes_and_exit">Yes, and exit</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_debug">DebugActivity</string>

</resources>