<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.blueodin.wifigraphs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <com.blueodin.wifigraphs.widgets.LabeledTextView
            android:id="@+id/ltv_fragment_graph_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_records"
            app:labelText="@string/label_records"/>

        <com.blueodin.wifigraphs.widgets.LabeledTextView
            android:id="@+id/ltv_fragment_graph_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/filler_network_detail_overview"
            app:labelText="@string/label_network_detail_header"/>
        
        <com.blueodin.wifigraphs.widgets.LabeledTextView
            android:id="@+id/ltv_fragment_graph_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_ssid"
            android:textSize="20sp"
            android:textStyle="italic"
            app:labelText="@string/label_graph_header"/>
        
        <com.blueodin.wifigraphs.widgets.LabeledTextView
            android:id="@+id/ltv_fragment_graph_timeframe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_timeframe"
            app:labelText="@string/label_graph_timeframe"/>
    </LinearLayout>
     <LinearLayout
	        android:id="@+id/layout_fragment_graph_holder"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2"/>
</LinearLayout>